# totaltpm

./: .gitignore  LICENSE  README.md  Roadmap.md  next.config.ts  package-lock.json  package.json
data/: app-data.json  saas_product_usage.csv
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/data/: route.ts
src/app/api/open-url/: route.ts
src/components/features/kanban/: ArchiveModal.tsx  CardDetailModal.tsx  DeliverableStatusModal.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx
src/components/features/notes/: NoteEditor.tsx  NoteItem.tsx  NotesList.tsx  NotesPanel.tsx  index.ts
src/components/features/project-selector/: ProjectSelector.tsx
src/components/features/tasks/: CreateTaskModal.tsx  TaskDetailModal.tsx  TaskFilters.tsx  TaskItem.tsx  TaskList.tsx  TasksPanel.tsx  index.ts
src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
src/components/ui/: AddButton.tsx  Badge.tsx  Button.tsx  Dropdown.tsx  EmptyState.tsx  IconButton.tsx  Input.tsx  LinksEditor.tsx  Modal.tsx  Select.tsx  Textarea.tsx  index.ts
src/context/: AppContext.tsx
src/hooks/: useApiStorage.ts  useKanban.ts  useLocalStorage.ts  useNotes.ts  useProjects.ts  useTasks.ts
src/lib/: api.ts  constants.ts  storage.ts  utils.ts
src/types/: index.ts
