[package]
name = "total-tpm"
version = "0.1.0"
description = "Total TPM - Project Management Desktop App"
authors = ["aevan101"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "total_tpm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "~2.9", features = ["devtools"] }
tokio = { version = "1", features = ["process", "time", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
